name:                e2e-parser
version:             1.0.0
synopsis:            E2E data attributes parser
description:         Please see README.md
homepage:            http://github.com/yamafaktory/e2e-parser
license:             BSD3
license-file:        LICENSE
author:              Davy Duperron
maintainer:          yamafaktory@gmail.com
copyright:           2015 Davy Duperron
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils
  build-depends:       base
                     , foldl >= 1.1.2
                     , tagsoup >= 0.13.3
                     , text
                     , turtle >= 1.1.3
  default-language:    Haskell2010

executable e2e-parser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , e2e-parser
                     , foldl >= 1.1.2
                     , tagsoup >= 0.13.3
                     , text
                     , turtle >= 1.1.3
  default-language:    Haskell2010

test-suite e2e-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , foldl >= 1.1.2
                     , tagsoup >= 0.13.3
                     , text
                     , turtle >= 1.1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yamafaktory/e2e-parser
