name:                e2e-parser
version:             1.0.1
synopsis:            E2E data attributes parser
description:         A small Haskell shell utility that parses HTML files under a given path looking for data-e2e attributes and outputs a report.
homepage:            http://github.com/yamafaktory/e2e-parser
license:             BSD3
license-file:        LICENSE
author:              Davy Duperron
maintainer:          yamafaktory@gmail.com
copyright:           2016 Davy Duperron
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils
  build-depends:       base
                     , foldl >= 1.1.2
                     , tagsoup >= 0.13.6
                     , text
                     , turtle >= 1.2.4
  default-language:    Haskell2010

executable e2e-parser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , e2e-parser
                     , foldl >= 1.1.2
                     , tagsoup >= 0.13.6
                     , text
                     , turtle >= 1.2.4
  default-language:    Haskell2010

test-suite e2e-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , foldl >= 1.1.2
                     , tagsoup >= 0.13.6
                     , text
                     , turtle >= 1.2.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yamafaktory/e2e-parser
